test/expected/using_eti.out
using SI = extern int
                  ^
19: error: "typedef extern int" is illegal for built-in type
